diesel_infer_query/tests/snapshots/integration_tests__parsing__casting.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT '123'::integer AS id, CAST(price AS text), name::varchar AS v_name FROM items"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "id",
            ),
            kind: Cast {
                inner: Literal {
                    value: Some(
                        "123",
                    ),
                    is_null: false,
                },
                tpe: "INTEGER",
            },
        },
        SelectField {
            ident: None,
            kind: Cast {
                inner: Field {
                    schema: None,
                    query_source: Some(
                        "items",
                    ),
                    source_id: None,
                    field_name: "price",
                    via_left_join: false,
                },
                tpe: "TEXT",
            },
        },
        SelectField {
            ident: Some(
                "v_name",
            ),
            kind: Cast {
                inner: Field {
                    schema: None,
                    query_source: Some(
                        "items",
                    ),
                    source_id: None,
                    field_name: "name",
                    via_left_join: false,
                },
                tpe: "VARCHAR",
            },
        },
    ],
    subqueries: [],
}
