diesel_infer_query/tests/snapshots/integration_tests__parsing__complex_cte_subquery_set_ops.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS WITH stage1 AS (SELECT a, b, c, d FROM sources WHERE c > 1), stage2 AS (SELECT a, b, c, d FROM other_sources WHERE c > 1), union_set AS (SELECT a, b, c, d FROM stage1 UNION SELECT a, b, c, d FROM stage2), cte_nested AS (\n                   SELECT t.a, t.b, t.c, t.d, s.col1, s.col2 FROM union_set t JOIN (SELECT col1, col2 FROM small_table LIMIT 1) s ON t.a = s.col\n               ) SELECT a, b, c, d, col1, col2 FROM cte_nested"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "a",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "cte_nested",
                ),
                source_id: Some(
                    4,
                ),
                field_name: "a",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "b",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "cte_nested",
                ),
                source_id: Some(
                    4,
                ),
                field_name: "b",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "c",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "cte_nested",
                ),
                source_id: Some(
                    4,
                ),
                field_name: "c",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "d",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "cte_nested",
                ),
                source_id: Some(
                    4,
                ),
                field_name: "d",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "col1",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "cte_nested",
                ),
                source_id: Some(
                    4,
                ),
                field_name: "col1",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "col2",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "cte_nested",
                ),
                source_id: Some(
                    4,
                ),
                field_name: "col2",
                via_left_join: false,
            },
        },
    ],
    subqueries: [
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "a",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "sources",
                        ),
                        source_id: None,
                        field_name: "a",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "b",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "sources",
                        ),
                        source_id: None,
                        field_name: "b",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "c",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "sources",
                        ),
                        source_id: None,
                        field_name: "c",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "d",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "sources",
                        ),
                        source_id: None,
                        field_name: "d",
                        via_left_join: false,
                    },
                },
            ],
        },
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "a",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "other_sources",
                        ),
                        source_id: None,
                        field_name: "a",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "b",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "other_sources",
                        ),
                        source_id: None,
                        field_name: "b",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "c",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "other_sources",
                        ),
                        source_id: None,
                        field_name: "c",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "d",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "other_sources",
                        ),
                        source_id: None,
                        field_name: "d",
                        via_left_join: false,
                    },
                },
            ],
        },
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "a",
                    ),
                    kind: Combined {
                        left: Field {
                            schema: None,
                            query_source: Some(
                                "stage1",
                            ),
                            source_id: Some(
                                0,
                            ),
                            field_name: "a",
                            via_left_join: false,
                        },
                        right: Field {
                            schema: None,
                            query_source: Some(
                                "stage2",
                            ),
                            source_id: Some(
                                1,
                            ),
                            field_name: "a",
                            via_left_join: false,
                        },
                        set_operator: Union,
                    },
                },
                SelectField {
                    ident: Some(
                        "b",
                    ),
                    kind: Combined {
                        left: Field {
                            schema: None,
                            query_source: Some(
                                "stage1",
                            ),
                            source_id: Some(
                                0,
                            ),
                            field_name: "b",
                            via_left_join: false,
                        },
                        right: Field {
                            schema: None,
                            query_source: Some(
                                "stage2",
                            ),
                            source_id: Some(
                                1,
                            ),
                            field_name: "b",
                            via_left_join: false,
                        },
                        set_operator: Union,
                    },
                },
                SelectField {
                    ident: Some(
                        "c",
                    ),
                    kind: Combined {
                        left: Field {
                            schema: None,
                            query_source: Some(
                                "stage1",
                            ),
                            source_id: Some(
                                0,
                            ),
                            field_name: "c",
                            via_left_join: false,
                        },
                        right: Field {
                            schema: None,
                            query_source: Some(
                                "stage2",
                            ),
                            source_id: Some(
                                1,
                            ),
                            field_name: "c",
                            via_left_join: false,
                        },
                        set_operator: Union,
                    },
                },
                SelectField {
                    ident: Some(
                        "d",
                    ),
                    kind: Combined {
                        left: Field {
                            schema: None,
                            query_source: Some(
                                "stage1",
                            ),
                            source_id: Some(
                                0,
                            ),
                            field_name: "d",
                            via_left_join: false,
                        },
                        right: Field {
                            schema: None,
                            query_source: Some(
                                "stage2",
                            ),
                            source_id: Some(
                                1,
                            ),
                            field_name: "d",
                            via_left_join: false,
                        },
                        set_operator: Union,
                    },
                },
            ],
        },
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "col1",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "small_table",
                        ),
                        source_id: None,
                        field_name: "col1",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "col2",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "small_table",
                        ),
                        source_id: None,
                        field_name: "col2",
                        via_left_join: false,
                    },
                },
            ],
        },
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "a",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "union_set",
                        ),
                        source_id: Some(
                            2,
                        ),
                        field_name: "a",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "b",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "union_set",
                        ),
                        source_id: Some(
                            2,
                        ),
                        field_name: "b",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "c",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "union_set",
                        ),
                        source_id: Some(
                            2,
                        ),
                        field_name: "c",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "d",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "union_set",
                        ),
                        source_id: Some(
                            2,
                        ),
                        field_name: "d",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "col1",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "s",
                        ),
                        source_id: Some(
                            3,
                        ),
                        field_name: "col1",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "col2",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "s",
                        ),
                        source_id: Some(
                            3,
                        ),
                        field_name: "col2",
                        via_left_join: false,
                    },
                },
            ],
        },
    ],
}
