diesel_infer_query/tests/snapshots/integration_tests__parsing__from_subquery.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT t1.some_col, users.name FROM (SELECT some_col FROM posts WHERE posts.id < 10) AS t1 INNER JOIN users ON users.id = t1.some_col"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "some_col",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "t1",
                ),
                source_id: Some(
                    0,
                ),
                field_name: "some_col",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "name",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "users",
                ),
                source_id: None,
                field_name: "name",
                via_left_join: false,
            },
        },
    ],
    subqueries: [
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "some_col",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "posts",
                        ),
                        source_id: None,
                        field_name: "some_col",
                        via_left_join: false,
                    },
                },
            ],
        },
    ],
}
