diesel_infer_query/tests/snapshots/integration_tests__parsing__in_list.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT name IN (1, 2, 4) FROM users"
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: In {
                left: Field {
                    schema: None,
                    query_source: Some(
                        "users",
                    ),
                    source_id: None,
                    field_name: "name",
                    via_left_join: false,
                },
                negated: false,
                list: [
                    Literal {
                        value: None,
                        is_null: false,
                    },
                    Literal {
                        value: None,
                        is_null: false,
                    },
                    Literal {
                        value: None,
                        is_null: false,
                    },
                ],
            },
        },
    ],
    subqueries: [],
}
