diesel_infer_query/tests/snapshots/integration_tests__parsing__intersect.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT project_id, user_id FROM assigned_tasks WHERE status = 'COMPLETED' INTERSECT SELECT product_id, associated_user FROM purchases WHERE purchased = TRUE"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "project_id",
            ),
            kind: Combined {
                left: Field {
                    schema: None,
                    query_source: Some(
                        "assigned_tasks",
                    ),
                    source_id: None,
                    field_name: "project_id",
                    via_left_join: false,
                },
                right: Field {
                    schema: None,
                    query_source: Some(
                        "purchases",
                    ),
                    source_id: None,
                    field_name: "product_id",
                    via_left_join: false,
                },
                set_operator: Intersect,
            },
        },
        SelectField {
            ident: Some(
                "user_id",
            ),
            kind: Combined {
                left: Field {
                    schema: None,
                    query_source: Some(
                        "assigned_tasks",
                    ),
                    source_id: None,
                    field_name: "user_id",
                    via_left_join: false,
                },
                right: Field {
                    schema: None,
                    query_source: Some(
                        "purchases",
                    ),
                    source_id: None,
                    field_name: "associated_user",
                    via_left_join: false,
                },
                set_operator: Intersect,
            },
        },
    ],
    subqueries: [],
}
