diesel_infer_query/tests/snapshots/integration_tests__parsing__is_null_and_not_null.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS SELECT 1 IS NOT NULL, 2 IS NULL"
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: PostfixOp {
                expr: Literal {
                    value: None,
                    is_null: false,
                },
                op: "IS NOT NULL",
                nullability: NeverNull,
            },
        },
        SelectField {
            ident: None,
            kind: PostfixOp {
                expr: Literal {
                    value: None,
                    is_null: false,
                },
                op: "IS NULL",
                nullability: NeverNull,
            },
        },
    ],
    subqueries: [],
}
